--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "prettier --write \"./day-*/**/*.ts\""
   },
   "devDependencies": {
+    "@types/node": "^12.12.14",
     "prettier": "1.19.1",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.2"
